--- a/desafio_oti/index.html
+++ b/desafio_oti/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>oti</title>
+    <title>Desafio Técnico OTI</title>
   </head>
   <body>
     <div id="app"></div>
